Add login & intl

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
 VITE_API_URL=https://pokeapi.co/api/v2
+VITE_GOOGLE_CLIENT_ID=113224179139-auhhojd07n838upouks2hjg53p8mc2ih.apps.googleusercontent.com
