--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@mui/material": "^5.13.3",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "oidc-react": "^3.2.0",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intl": "^6.4.3",
     "react-router-dom": "^6.11.2"
   },
   "resolutions": {
